[tool.poetry]
name = "repl-nix-vishnu-s-flask-project-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_vishnu_s_flask_project_1"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
